# slowrest

./: .env  .gitignore  .python-version  README.md  quick_script.py  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
scripts/: decorate_run_number.py
slowrest/: __init__.py  db.py  queries.py  resources.py  utils.py
slowrest/conf/: db.py
slowrest/config/: conn_example.py
slowrest/sensor_lists/: bellegarde  coldbox  comissioning  crptemps  cryogenics  cryostat  groundplanes  inside  insidelayout  jura  lausanne  lems  multiplexer  np02cryo  pl506  saleve  tinternal  underfloor  vdcam  vdcontrol  zmonitor
slowrest/sql/: schema.sql
tagrest/: __init__.py  db.py  hash.py  resources.py  schema.sql  utils.py
tagrest/sql/: queries.py  schema.sql
tests/: conftest.py  data.sql  test_db.py  test_factory.py  test_utils.py
