[metadata]
name = slowrest
version = 1.0.0
maintainer = Lino Gerlach
maintainer_email = lino.oscar.gerlach@cern.ch

[options]
packages = find:
include_package_data = true
install_requires =
    Flask

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    slowrest