[metadata]
name = slowrest
version = 1.0.0
maintainer = Lino Gerlach
maintainer_email = lino.oscar.gerlach@cern.ch

[options]
packages = find_namespace:
package_dir =
    = ./
install_requires =
    Flask

[options.packages.find]
where = ./
exclude =
    tests*

[options.package_data]
slowrest.sensor_lists = 
    *

[options.extras_require]
test =
    pytest

[tool:pytest]
testpaths = tests

[coverage:run]
branch = True
source =
    slowrest
